--- a/style.css
+++ b/style.css
@@ -54,13 +54,13 @@ body { margin: 0%; }
 
 .l-height-44 { line-height: 44.67px; }
 
-.l-height-43 { line-height: 44px; }
+.l-height-42 { line-height: 44px; }
 
-.l-height-42 { line-height: 42.67px; }
+.l-height-426 { line-height: 42.67px; }
 
 .backorange { background-color: #ff6b00; }
 
-.white-1 { color: #fff5e1; }
+.white-1 { color: #fff5E1; }
 
 .white-2 { color: #fff; }
 
@@ -70,7 +70,7 @@ body { margin: 0%; }
 
 .social img { height: 20px; }
 
-p { margin: 0%; }
+p { margin: 8% 0% }
 
 .social li { list-style: none; }
 
@@ -91,7 +91,7 @@ p { margin: 0%; }
 .wrapper {
   max-width: 1000px;
   margin: 0;
-  padding: 0 5%;
+  padding: 0% 5%;
   display: flex;
   flex-direction: column;
   background-color: #1c1a19;
@@ -101,6 +101,10 @@ p { margin: 0%; }
   height: 100vh;
   justify-content: center;
 }
+
+.wrapper h1 { margin: 0% 0%; }
+
+.wrapper h2 { margin-top: 0%; }
 
 .works {
   max-width: 1000px;
@@ -149,7 +153,7 @@ a {
   line-height: 20px;
 }
 
-a:hover { background: rgb(43, 43, 156, 0.2); }
+a:hover { background: rgb(43, 43, 156, .2); }
 
 .center {
   justify-self: center;
@@ -158,7 +162,7 @@ a:hover { background: rgb(43, 43, 156, 0.2); }
 
 .works p { margin: 1% 0%; }
 
-.buttonproject a {
+.buttonproject a{
   background-color: #ff6b00;
   margin: 1% 0%;
   text-decoration: none;
@@ -166,4 +170,4 @@ a:hover { background: rgb(43, 43, 156, 0.2); }
   padding: 2% 4%;
 }
 
-.buttonproject a:hover { background-color: #e05304; }
+.buttonproject a:hover { background-color:#e05304; }
