--- a/style.css
+++ b/style.css
@@ -70,7 +70,7 @@ body { margin: 0%; }
 
 .social img { height: 20px; }
 
-p { margin: 8% 0% }
+p { margin: 8% 0%; }
 
 .social li { list-style: none; }
 
@@ -153,7 +153,7 @@ a {
   line-height: 20px;
 }
 
-a:hover { background: rgb(43, 43, 156, .2); }
+a:hover { background: rgb(43, 43, 156, 0.2); }
 
 .center {
   justify-self: center;
@@ -162,7 +162,7 @@ a:hover { background: rgb(43, 43, 156, .2); }
 
 .works p { margin: 1% 0%; }
 
-.buttonproject a{
+.buttonproject a {
   background-color: #ff6b00;
   margin: 1% 0%;
   text-decoration: none;
@@ -170,4 +170,4 @@ a:hover { background: rgb(43, 43, 156, .2); }
   padding: 2% 4%;
 }
 
-.buttonproject a:hover { background-color:#e05304; }
+.buttonproject a:hover { background-color: #e05304; }
