--- a/style.css
+++ b/style.css
@@ -60,7 +60,7 @@ body { margin: 0%; }
 
 .backorange { background-color: #ff6b00; }
 
-.white-1 { color: #fff5E1; }
+.white-1 { color: #fff5e1; }
 
 .white-2 { color: #fff; }
 
