--- a/style.css
+++ b/style.css
@@ -54,13 +54,13 @@ body { margin: 0%; }
 
 .l-height-44 { line-height: 44.67px; }
 
-.l-height-42 { line-height: 44px; }
+.l-height-43 { line-height: 44px; }
 
 .l-height-42 { line-height: 42.67px; }
 
-.backorange{ background-color: #ff6b00;}
+.backorange { background-color: #ff6b00; }
 
-.white-1 { color: #fff5E1; }
+.white-1 { color: #fff5e1; }
 
 .white-2 { color: #fff; }
 
@@ -186,8 +186,8 @@ a {
   line-height: 20px;
 }
 
-.project-1 ul { 
-  margin-top: 5%; 
+.project-1 ul {
+  margin-top: 5%;
   justify-content: flex-start;
 }
 
