--- a/style.css
+++ b/style.css
@@ -75,6 +75,7 @@ p { margin: 5% 0%; }
 .social li { list-style: none; }
 
 .project-1 li { color: #fff; }
+
 .navigation {
   max-width: 1000px;
   background-color: #3c3a39;
@@ -146,7 +147,7 @@ p { margin: 5% 0%; }
   align-self: center;
 }
 
-.rule-4{
+.rule-4 {
   width: 40%;
   background: #1c1a19;
   border: 1px solid black;
@@ -281,32 +282,30 @@ a:hover { background: rgb(43, 43, 156, 0.2); }
 }
 
 .contact button {
-  margin-top: 10%;
-  margin-bottom: 30%;
-  background-color: #ff6b00;
-  border: none;
-  padding:5% 2%;
-  width: 50%;
-  align-self: center;
+  margin-top : 10%;
+  margin-bottom : 30%;
+  background-color : #ff6b00;
+  border : none;
+  padding :5% 2%;
+  width : 50%;
+  align-self : center;
 }
 
 .contact button:hover { background-color: #e05304; }
 
 form {
-  display: flex;
-  flex-direction: column;
-  width:auto ;
+  display : flex;
+  flex-direction : column;
+  width : auto;
 }
 
-input {
-  border: none;
-}
+input { border : none; }
 
 textarea {
-  background-color: #e9e5e3;
-  width: 100%;
-  height: 100px;
-  border: none;
+  background-color : #e9e5e3;
+  width : 100%;
+  height : 100px;
+  border : none;
 }
 
 .contact p {
