--- a/style.css
+++ b/style.css
@@ -305,6 +305,14 @@ a:hover {
   line-height: 52px;
 }
 
+.projectlist ul {
+  margin: 0%;
+  padding: 0%;
+  list-style: none;
+  display: flex;
+  justify-content: space-between;
+}
+
 .project-1 {
   max-width: 1000px;
   margin: 5% 0% 0% 0%;
@@ -779,6 +787,39 @@ footer .social {
     align-items: flex-start;
   }
 
+  footer .social ul {
+    padding: 0%;
+    margin: 0%;
+    flex-direction: row;
+    flex-wrap: wrap;
+  }
+
+  .openover h1 {
+    padding: 0%;
+    font-family: 'Crete Round', sans-serif;
+    font-weight: 700;
+    font-size: 32px;
+    line-height: 44px;
+    color: #050505;
+    margin: 1%;
+    grid-column: 1/4;
+  }
+
+  .openover p {
+    width: 70%;
+    text-align: left;
+    margin: 0% 5%;
+    font-family: 'Inter', sans-serif;
+    font-weight: 400;
+    font-size: 16px;
+    line-height: 30px;
+  }
+
+  .openover a {
+    padding: 1% 5%;
+    margin-right: 1%;
+  }
+
   #desktopitem01 h1 {
     display: none;
   }
@@ -821,10 +862,6 @@ footer .social {
   .button1 {
     padding: 0%;
     margin: 0% 15% 0% 3%;
-  }
-
-  .projectlist ul {
-    justify-content: flex-start;
   }
 
   .desktopversion {
@@ -905,13 +942,6 @@ footer .social {
     align-self: flex-start;
   }
 
-  footer .social ul {
-    padding: 0%;
-    margin: 0%;
-    flex-direction: row;
-    flex-wrap: wrap;
-  }
-
   .rule-4 {
     background: transparent;
     border: transparent;
@@ -938,27 +968,6 @@ footer .social {
     margin-bottom: 5%;
   }
 
-  .openover h1 {
-    padding: 0%;
-    font-family: 'Crete Round', sans-serif;
-    font-weight: 700;
-    font-size: 32px;
-    line-height: 44px;
-    color: #050505;
-    margin: 1%;
-    grid-column: 1/4;
-  }
-
-  .openover p {
-    width: 70%;
-    text-align: left;
-    margin: 0% 5%;
-    font-family: 'Inter', sans-serif;
-    font-weight: 400;
-    font-size: 16px;
-    line-height: 30px;
-  }
-
   .openover .closer {
     grid-column: 1/4;
   }
@@ -978,10 +987,5 @@ footer .social {
   .openover .buttonproject {
     margin: 0% 5%;
     grid-column: 1/3;
-  }
-
-  .openover a {
-    padding: 1% 5%;
-    margin-right: 1%;
   }
 }
