--- a/style.css
+++ b/style.css
@@ -628,9 +628,9 @@ footer .social {
 .testing {
   position: absolute;
   filter: blur(8px);
-  opacity: .9;
+  opacity: 0.9;
   width: 100%;
-  height: 100%; 
+  height: 100%;
   background-image: url("img/background.png");
   background-position: center;
   background-repeat: no-repeat;
@@ -640,14 +640,13 @@ footer .social {
 .overlaydiv {
   padding: 2% 2% 2% 7%;
   background-color: rgb(255, 255, 255);
-  background-color: rgb(255, 255, 255);
   z-index: 2;
 }
 
-  .overlaydiv .closer {
-    display: flex;
-    margin-left: auto;
-  }
+.overlaydiv .closer {
+  display: flex;
+  margin-left: auto;
+}
 
 @media (min-width: 764px) and (max-width: 1368px) {
 
@@ -835,12 +834,16 @@ footer .social {
     flex-wrap: wrap;
   }
 
-  .overlaydiv{
+  .overlaydiv {
     padding: 2%;
     width: 80%;
     position: absolute;
     top: 5%;
     left: 5%;
+    margin: 0%;
+    display: grid;
+    grid-template-columns: auto auto auto auto;
+    margin-bottom: 5%;
   }
 
   .overlaydiv h1 {
@@ -1007,14 +1010,6 @@ footer .social {
     padding-left: 30%;
   }
 
-  .overlaydiv {
-    width: 90;
-    margin: 0%;
-    display: grid;
-    grid-template-columns: auto auto auto auto;
-    margin-bottom: 5%;
-  }
-
   .overlaydiv .closer {
     grid-column: 4/5;
     display: flex;
@@ -1040,5 +1035,4 @@ footer .social {
     margin-top: 33%;
     margin-left: 9%;
   }
-
 }
