--- a/style.css
+++ b/style.css
@@ -649,7 +649,6 @@ footer .social {
 }
 
 @media (min-width: 764px) and (max-width: 1368px) {
-
   .openover {
     padding-left: 14%;
   }
@@ -855,7 +854,7 @@ footer .social {
     color: #050505;
     margin: 1% 0%;
     grid-column: 1/4;
-    grid-row: 1/2
+    grid-row: 1/2;
   }
 
   .overlaydiv p {
